--- a/styles/index.css
+++ b/styles/index.css
@@ -114,10 +114,144 @@ header {
 #quick-style-2 {
     color: #FF900E;
 }
+/* feature style */
+.features {
+    gap: 140px;
+    margin-bottom: 130px;
+}
+.feature-container {
+   justify-content: space-between;
+}
+.feature-container h3 {
+    margin-bottom: 0;
+    border-left: 5px solid #FF900E ;
+    padding-left: 21px;
+}
+.feature-container p {
+    margin-bottom: 30px;
+}
+.feature-card-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+}
+.feature-title{
+    max-width: 586px;
+}
+.feature-card {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.192) ;
+    padding: 30px 30px;
+    border-radius: 8px;
+    max-width: 586px;
+}
+.feature-card h4 {
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+    margin-top: 0;
+}
+.feature-card p {
+    margin-bottom: 0;
+}
+.exp-btn {
+    padding: 45px 42px;
+    margin-top: -92px;
+    margin-left: -77px;
+}
+#year10 {
+    font-size: 4rem;
+    font-weight: bold;
+}
+#experience {
+    font-size: 1.56rem;
+}
+/* fact style */
+.fact {
+    margin-bottom: 180px;
+}
+.fact-container > p {
+    max-width: 540px;
+    margin: 0 0 100px;
+}
+.fact-container h3 {
+    margin: 0 0 24px;
+}
+.fact-item-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    column-gap: 20px ;
+}
+.fact-items {
+    width: 240px;
+    height: 240px;
+    border: 2px solid #FF900E;
+    border-radius: 8px;
+    text-align: center;
+}
+.fact-item > img {
+    width: 45.22px;
+    height: 45.22px;
+}
+.fact-item > h3 {
+    margin: 10px 0px 0px;
+}
+.fact-item > p {
+    margin-top: 5px;
+    margin-bottom: 0;
+    font-size: 1.25rem;
+}
+.fact-item {
+    padding: 45px 35px 60px 35px;
+}
+/* sponsor style */
+.sponsor {
+    margin-bottom: 130px;
+}
+.sponsor-container {
+    display: flex;
+    justify-content: center;
+}
+.sponsor-title {
+    max-width: 542px;
+    text-align: center;
+}
+.sponsor-title > h3 {
+    margin: 0;
+} 
+.sponsor-title > p {
+    margin-top: 25px;
+    margin-bottom: 50px;
+}
+.sponsor-name {
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    justify-items: center;
+    column-gap: 30px;
+}
+.sponsor-name img {
+    max-height: 50px;
+    width: auto;
+    filter: grayscale(100%);
+}
+/* footer style */
+.footer{
+    margin-bottom: 216px;
+}
+.footer p {
+    background-color: rgba(255, 144, 14, 0.1) ;
+    border-radius: 10px;
+    font-size: 1.25rem;
+    padding: 30px 250px;
+    text-align: center;
+}
 /* small device style */
 
 @media  screen and (max-width: 576px) {
-    .navbar,.nav-links,.quick-list {
+    .navbar,
+    .nav-links,
+    .quick-list,
+    .features {
         flex-direction: column;
     }
     .quick-list {
@@ -125,15 +259,86 @@ header {
         margin-top: 50px;
     }
     .quick-list-image {
-        /* grid-template-columns: 1fr; */
         gap: 10px;
     }
+    .exp-btn {
+        
+        padding: 25px 20px;
+        margin-top: 32px;
+        margin-left: 0px;
+       
+    }
+    .exp-btn-container{
+        display: flex;
+        justify-content: center;
+    }
+    .fact {
+    margin-bottom: 100px;
+    }
+    .fact-item-container {
+        grid-template-columns: 1fr;
+        row-gap: 30px;
+    }
+    .sponsor-name {
+        grid-template-columns: repeat(1,1fr);
+        row-gap:  50px;
+    }
+    .footer {
+        margin-bottom: 100px;
+    }
+    .footer p {
+        padding: 20px 20px;
+    }
+    .sponsor {
+        margin-bottom: 90px;
+}
 }
 
 /* medium device style */
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
-    .quick-list-items {
-    max-width: 400px;
+        .quick-list-items {
+        max-width: 400px;
+    }
+    .features{
+        flex-direction: column;
+    }
+    .feature-title,.feature-card {
+        max-width: none;
+
+    }
+    .exp-btn {
+    padding: 45px 42px;
+    margin-top: 0px;
+    margin-left: 0px;
+    }
+    .exp-btn-container{
+        display: flex;
+        justify-content: center;
+        margin-top: 30px;
+    }
+    .fact {
+    margin-bottom: 100px;
+    }
+    .fact-item-container {
+        grid-template-columns: repeat(2,1fr);
+        row-gap: 30px;
+    }
+    .sponsor-name {
+        grid-template-columns: repeat(2,1fr);
+        justify-items: center;
+        row-gap:  50px;
+    }
+    .sponsor-name img:nth-child(5){
+        grid-column: span 2 ;
+    }
+    .footer {
+        margin-bottom: 100px;
+    }
+    .footer p {
+        padding: 20px 0px;
+    }
+    .sponsor {
+        margin-bottom: 100px;
 }
 }
